--- a/5 UDP and its applications/UDP and its applications.tex
+++ b/5 UDP and its applications/UDP and its applications.tex
@@ -10,7 +10,7 @@
 \label{sec:schema}
     In this lab, you will not need to a router, only two workstations and one hub to connect two host together as show in \hyperref[fig:5.0]{Figure~5.0} and \hyperref[tab:5.0]{Table~5.0}.
     \begin{table}[H]
-        \caption{Host IP addresses for Fig. 5.0}
+        \caption{Host IP addresses for \hyperref[fig:5.0]{Figure~5.0}}
         \label{tab:5.0}
         \centering
         \begin{tabular}{ *2c|*2c }
@@ -227,7 +227,7 @@ tcpdump -x host your-host and remote-host
     Observe the protocol in action.    Analyze various types of TFTP messages. Save \lstinline{tcpdump} output for the lab report.
     
     \begin{report}
-        \item List all the different types of packets exchanged during the \lstinline{tftp} session. Compare them with the TFTP message format in Fig. 5.3.
+        \item List all the different types of packets exchanged during the \lstinline{tftp} session. Compare them with the TFTP message format in \hyperref[fig:5.3]{Figure~5.3} of reference book.
 
         Why does the server’s port number change?
         
