--- a/9 Network management and security/Network management and security.tex
+++ b/9 Network management and security/Network management and security.tex
@@ -7,7 +7,60 @@
 
 \begin{document}
 \part{SNMP Exercises}
-    For the exercises in this section, the network topology is given in Fig. 1.3, where all the hosts are connected in a single network segment using their IP addresses, i.e.\  from 128.238.66.100 to 128.238.66.102.
+    For the exercises in this section, the network topology is given in \hyperref[fig:1.3]{Figure~1.3}, where all the hosts are connected in a single network segment using their IP addresses, i.e.\  from 128.238.66.100 to 128.238.66.102.
+
+    \begin{center}
+        \begin{minipage}{0.48\textwidth}
+            \begin{flushleft}
+                \begin{table}[H]
+                    \caption{The IP addresses of the hosts (Table~1.2)}
+                    \centering
+                    \begin{tabular}{ c c c }
+                        \hline \hline
+                        Host & IP Address & Subnet Mask \\
+                        \hline 
+                        h0 & 128.238.66.100 & 255.255.255.0 \\
+                        h1 & 128.238.66.101 & 255.255.255.0 \\
+                        h2 & 128.238.66.102 & 255.255.255.0 \\
+                        h3 & 128.238.66.103 & 255.255.255.0 \\
+                        h4 & 128.238.66.104 & 255.255.255.0 \\
+                        h5 & 128.238.66.105 & 255.255.255.0 \\
+                        h6 & 128.238.66.106 & 255.255.255.0 \\
+                        h7 & 128.238.66.107 & 255.255.255.0 \\
+                        \hline \hline
+                        \end{tabular}
+                \end{table}
+            \end{flushleft}
+        \end{minipage}
+        \begin{minipage}{0.48\textwidth}
+            \begin{flushright}
+                \begin{figure}[H]
+                    \centering
+                    \begin{tikzpicture}
+                        \node[draw,align=center,rounded corners] (s) at (0,0){Core\\Switch};
+                        \node[draw] (h0) at (0,2){h0};
+                        \node[draw] (h1) at ({sqrt(2)},{sqrt(2)}){h1};
+                        \node[draw] (h2) at (2,0){h2};
+                        \node[draw] (h3) at (-{sqrt(2)},{sqrt(2)}){h3};
+                        \node[draw] (h4) at (-2,0){h4};
+                        \node[draw] (h5) at (-{sqrt(2)},-{sqrt(2)}){h5};
+                        \node[draw] (h6) at (0,-2){h6};
+                        \node[draw] (h7) at ({sqrt(2)},-{sqrt(2)}){h7};
+                    
+                        \draw (h0) -- (s);
+                        \draw (h1) -- (s);
+                        \draw (h2) -- (s);
+                        \draw (h3) -- (s);
+                        \draw (h4) -- (s);
+                        \draw (h5) -- (s);
+                        \draw (h6) -- (s);
+                        \draw (h7) -- (s);
+                    \end{tikzpicture}
+                    \caption{A single segment network (Figure~1.3)}\label{fig:1.3}
+                \end{figure}
+            \end{flushright}
+        \end{minipage}
+    \end{center}
 
     Before the lab, you should:
     \begin{enumerate}
@@ -66,7 +119,7 @@ rocommunity guest
     \begin{report}
     \item What is the port number used by the SNMP agent?
     
-    \item What are the full text-based and numerical object ID’s of the MIB object \texttt{interface.ifMTU.2}? What was the value returned? Justify the answer using Fig. 9.3 and the \lstinline{ifconfig} output.
+    \item What are the full text-based and numerical object ID’s of the MIB object \texttt{interface.ifMTU.2}? What was the value returned? Justify the answer using \hyperref[fig:9.3]{Figure~9.3} of reference book and the \lstinline{ifconfig} output.
     
     \item Draw the format of one of the SNMP messages saved, including the name and value of each field.
     \end{report}
