section 4: fix figure and, section 9: fix openssl output format

--- a/9 Network management and security/Network management and security.tex
+++ b/9 Network management and security/Network management and security.tex
@@ -241,7 +241,7 @@ openssl req -x509 -nodes -days 365 -newkey rsa:1024 -keyout /etc/apache2/ssl/ser
 
     The questions portion looks something like this:
     {\small
-    \begin{verbatim}
+    \begin{lstlisting}[language={conf},emph={IR,Tehran,University, of, ECE, Department,ece,ut,ac,ir,netlab,}]
 Country Name (2 letter code) [AU]:IR 
 State or Province Name (full name) [Some-State]:Tehran 
 Locality Name (eg, city) []:Tehran 
@@ -249,7 +249,7 @@ Organization Name (eg, company) [Internet Widgits Pty Ltd]:University of Tehran
 Organizational Unit Name (eg, section) []:ECE Department 
 Common Name (e.g.\ server FQDN or YOUR name) []:ece.ut.ac.ir 
 Email Address []:netlab@ut.ac.ir 
-    \end{verbatim}}
+    \end{lstlisting}}
 
     Save the output for the lab report.
 
