--- a/4 Static and dynamic routing/Static and Dynamic routing.tex
+++ b/4 Static and dynamic routing/Static and Dynamic routing.tex
@@ -27,12 +27,12 @@
 
     \begin{figure}[H]
         \centering
-        \begin{tikzpicture}
-            \node[draw] (h1) at (-4,0){Host\textsubscript{A}};
-            \node[draw,rounded corners] (hub2) at (-2,0){Switch 2};
+        \begin{tikzpicture}[every node/.style={inner sep=6}]
+            \node[draw] (h1) at (-3,-1.5){Host\textsubscript{A}};
+            \node[draw,rounded corners] (hub2) at (-3,0){Switch 2};
             \node[draw,rounded corners] (router) at (0,0){Router};
-            \node[draw,rounded corners] (hub1) at (2,0){Switch 1};
-            \node[draw] (h0) at (4,0){Host\textsubscript{B}};
+            \node[draw,rounded corners] (hub1) at (3,0){Switch 1};
+            \node[draw] (h0) at (3,-1.5){Host\textsubscript{B}};
         
             \draw (h0) -- (hub1);
             \draw (h1) -- (hub2);
