--- a/UTNetLabBase.cls
+++ b/UTNetLabBase.cls
@@ -78,7 +78,7 @@
       tcpdump, wireshark, arp, arping, ping, iptables, xinetd, inetd, date, time, ftp, tftp, htop, ntp,
       sysctl, service, apache2, gcc, g++, sftp, make-ssl-cert, openssl, ssh, traceroute,  man, tracepath,
       a2enmod, pgrep, mv, snmpwalk, snmpget, rlogin, ps, kill, sock, socket, ntptrace, ntpq,
-      goaccess, webalizer, vlc, firefox,
+      goaccess, webalizer, vlc, firefox, systemctl,
     },
     morekeywords=[2]{
       netspy, netspyd, %UDPserver, UDPclient,
